# BeerGame

./: .gitignore  CMakeLists.txt  README.md  references.txt
doc/: CMakeLists.txt  Doxyfile.in  README.md
src/: CMakeLists.txt
src/backend/: game.cpp  game.h  instructor.cpp  instructor.h  main.cpp  order.cpp  order.h  player.cpp  player.h  playerevent.cpp  playerevent.h  shipment.cpp  shipment.h
src/frontend/: chooseserver.cpp  chooseserver.h  chooseserver.ui  clientrequest.cpp  clientrequest.h  clientrequest.ui  gamescreen.cpp  gamescreen.h  gamescreen.ui  instructordialog.cpp  instructordialog.h  instructordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerdialog.cpp  playerdialog.h  playerdialog.ui
tests/: CMakeLists.txt  tests.cpp
